# Contabil-app

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml  supabase-deploy.yml
apps/admin/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/desktop-contabilidade/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
apps/desktop-contabilidade/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-contabilidade/src-tauri/capabilities/: default.json
apps/desktop-contabilidade/src-tauri/src/: lib.rs  main.rs
apps/desktop-empresa/: index.html  package.json  tailwind.config.ts  vercel.json  vite.config.ts
apps/desktop-empresa/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-empresa/src-tauri/capabilities/: default.json
apps/desktop-empresa/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  app.json  package.json  tailwind.config.ts  tsconfig.json
docs/: BILLING_E_ONBOARDING.md  ESTADO_DO_PROJETO.md  FRONTEND_E_DISTRIBUICAO.md  IMPLEMENTATION_PLAN.md  OPERACAO.md
landing/: README.md
supabase/: config.toml  seed.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260319000001_extensions_e_helpers.sql  20260319000002_schema_tenants_e_planos.sql  20260319000003_schema_empresas_e_funcionarios.sql  20260319000004_schema_documentos_e_lotes.sql  (+14 more)
(+94 files in other folders)
