[package]
name = "desktop-contabilidade"
version = "0.1.0"
description = "ContaHub — App Desktop para Contabilidades"
authors = ["ContaHub"]
edition = "2021"

[lib]
name = "desktop_contabilidade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
