[package]
name = "desktop-empresa"
version = "0.1.0"
description = "ContaHub — App Desktop para Empresas Clientes"
authors = ["ContaHub"]
edition = "2021"

[lib]
name = "desktop_empresa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
